# category-theory-python

./: .buildinfo  .bumpversion.cfg  .cspell_dict.txt  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.html  README.md  about.html  category_theory.html  cspell.config.yaml  genindex.html  index.html  modules.html  monoid.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  test_monoid.py
.github/workflows/: github-pages.yml  main.yml
_modules/: index.html
_modules/category_theory/: applicative.html  core.html  functor.html  monoid.html  operations.html  par_operations.html
_sources/: README.md.txt  category_theory.rst.txt  index.rst.txt  modules.rst.txt
docs/source/: about.md  conf.py  index.rst
src/category_theory/: __init__.py  applicative.py  core.py  functor.py  monoid.py  operations.py  par_operations.py
tests/: test_applicative.py  test_functor.py  test_monoid.py  test_operations.py  test_par_operations.py
