[metadata]
name = category_theory
version = 0.1.0
description = Learning platform for category theory in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finsberg/category-theory-python
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = category theory, functional programming

[options]
packages = find:
install_requires =
    dask
python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx
    sphinx-book-theme
test =
    pytest
    pytest-cov

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/category_theory --cov-report html --cov-report term-missing -v
testpaths =
    tests

[mypy]
files = src/category_theory
ignore_missing_imports = true
exclude = docs

[coverage:report]
exclude_lines =
    @abstractmethod
    @abc.abstractmethod
    @abstractstaticmethod
    @abc.abstractstaticmethod
